- Fixed error 500 while trying to fetch wallet statistics for category that hasn't been used in such a wallet.